--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,10 +40,10 @@
 			            </ul>
 			          </li>		          
 			        <% else %>
-			        <ul class="header-right">
-				          <li><%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %></li> |
-				          <li><%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %></li>
-			          </ul>
+			        <div class="header-right">
+				          <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> | 
+				          <%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %>
+			          </div>
 			        <% end %>
 		      	</ul>
 		    </div>
