--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,7 +2,12 @@
 	<div class="row">
 		<div class="col-md-2"></div>
 		<div class="col-xs-12 col-md-8">
-			
+			<div class="well">
+				<h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">últimas preguntas realizadas</h3>
+			</div>
+			<div class="well">
+				<h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">últimas preguntas respondidas</h3>
+			</div>
 		</div>
 	</div>
 </div>
