--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,11 +3,11 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="well">
 				<h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Últimas preguntas realizadas</h3>
-				<%= if @questions.count == 0 %>
+				<% if @questions.count == 0 %>
 					<ul class="list-group" style="list-style-type:none">
 						<li class="list-group-item italica"><center class="italica">No existe contenido</center></li>
 					</ul>
-				<%= else %>
+				<% else %>
 					<% @questions.each do |q|%>
 						<ul class="list-group" style="list-style-type:none">
 							<li class="list-group-item italica"><%= q.body %></li>
@@ -18,17 +18,17 @@
 						<div style="padding-top:2em"></div>
 						<hr>
 					<% end %>
-				<%= end %>
+				<% end %>
 			</div>
 		</div>
 		<div class="col-xs-12 col-md-6">
 			<div class="well">
 				<h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Últimas preguntas respondidas</h3>
-				<%= if @answers.count == 0 %>
+				<% if @answers.count == 0 %>
 					<ul class="list-group" style="list-style-type:none">
 						<li class="list-group-item italica"><center class="italica">No existe contenido</center></li>
 					</ul>
-				<%= else %>
+				<% else %>
 					<% @answers.each do |a|%>
 						<ul class="list-group" style="list-style-type:none">
 							<li class="list-group-item italica"><%= a.body %></li>
@@ -45,11 +45,11 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="well">
 				<h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Preguntas sin respuesta</h3>
-				<%= if @not_answered_questions.count == 0 %>
+				<% if @not_answered_questions.count == 0 %>
 					<ul class="list-group" style="list-style-type:none">
 						<li class="list-group-item italica"><center class="italica">No existe contenido</center></li>
 					</ul>
-				<%= else %>
+				<% else %>
 					<% @not_answered_questions.each do |q|%>
 						<ul class="list-group" style="list-style-type:none">
 							<li class="list-group-item italica"><%= q.body %></li>
