--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] %>
-	<div class="alert alert-success container-flash"><%= flash[:notice].html_safe unless flash[:notice].blank? %>
+	<div class="alert alert-success container-flash"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> <%= flash[:notice].html_safe unless flash[:notice].blank? %>
 	  	<button type="button" class="close" data-dismiss="alert">
 		  <span aria-hidden="true">&times;</span>
 		  <span class="sr-only">Cerrar</span>
@@ -8,7 +8,7 @@
 <% end %>
 
 <% if flash[:alert] %>
-  	<div class="alert alert-danger container-flash"><%= flash[:alert].html_safe unless flash[:alert].blank? %>
+  	<div class="alert alert-danger container-flash"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <%= flash[:alert].html_safe unless flash[:alert].blank? %>
 	  	<button type="button" class="close" data-dismiss="alert">
 		  <span aria-hidden="true">&times;</span>
 		  <span class="sr-only">Cerrar</span>
