--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,12 +53,16 @@
                   </div>
                   <div class="row" style="padding-top:1em">
                     <div class="col-md-1"></div>
-                    <div class="col-xs-12 col-md-10"><span class="error"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Todos los campos son obligatorios</span></div>
+                    <div class="col-xs-12 col-md-10"><span class="error">* </span> Todos los campos son obligatorios</span></div>
                   </div>
                   <center>
                     <div class="row" style="padding-top:1em">
                       <div class="col-md-1"></div>
-                      <div class="col-xs-12 col-md-10 form-group"><%= f.submit "Registrarse", class:"btn btn-primary negrita" %></div>
+                      <div class="col-xs-12 col-md-10 form-group"><input type="checkbox" id="terms"/> <span class="destacado">Acepto los términos y condiciones de uso</span></div>
+                    </div>
+                    <div class="row" style="padding-top:1em">
+                      <div class="col-md-1"></div>
+                      <div class="col-xs-12 col-md-10 form-group"><%= f.submit "Registrarse", class:"btn btn-primary negrita", id:"registration-submit", disabled:"true" %></div>
                     </div>
                   </center>
                   <div class="row">
