--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -59,7 +59,7 @@
               <div class="row" style="padding-top:1em">
                 <div class="col-md-1"></div>
                 <!--<div class="col-xs-12 col-md-10 form-group"><input type="checkbox" id="terms"/> <span class="destacado">Acepto los términos y condiciones de uso</span></div>-->
-                <div class="col-xs-12 col-md-10">Haciendo click en <span class="negrita">Registrarse</span> acepta los <a href="/terms" target="black" class="destacado">Térmicos y Condiciones de Uso</a>.</div>
+                <div class="col-xs-12 col-md-10">Seleccionando la opción <span class="negrita">Registrarse</span> acepta los <a href="/terms" target="black" class="destacado">Términos y Condiciones de Uso</a>.</div>
               </div>
               <div class="row" style="padding-top:1em">
                 <div class="col-md-1"></div>
