--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -33,7 +33,7 @@
             </center>
             <hr>
             <%= render 'uploads/new' %>
-            <hr>
+            <div style="padding-top:1em"></div>
           </div>
           <div class="panel-footer">
             <center>
