welcome#index updated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,13 +71,9 @@
 				<%= yield %>
 			</div>
 
-			<!-- El siguiente if corrige la vista del footer temporalmente. Cuando se condigure la sección 'Noticias', y el cuerpo se rellene, hay que eliminarlo -->
-			<% if controller.controller_name == 'welcome' %>
-				<div style="padding-top:12em"></div> 
-			<% end %>
 		<footer>
 			<center>
-				<span class="negrita"><span class="destacado">Julián Ailán</span> | <span class="destacado">Lucas Hourquebie</span> | 2015</span>
+				<span class="negrita"><span class="destacado">Julián Ailán</span> | <span class="destacado">Lucas Hourquebie</span> - 2015</span>
 			</center>
 		</footer>
 	</body>
