--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,10 +4,13 @@
     	<div class="col-xs-12 col-md-6">
             <div class="well">
     		  <h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Bienvenid@s</h3>
-              <p>El objetivo de este sitio es poder compartir información de la carrera, tal como apuntes, parciales de años anteriores o fechas de comienzo de cursada, entre otras cosas. </p>
-              <p>Los apuntes y examenes estarán almacenados en carpetas de Google Drive, de las cuales podrás descargar archivos o subir cualquier información que consideres pertinente compartir acerca de cualquiera de las materias.</p>
-              <p>Además también estarán disponibles los links a las páginas de cada cátedra. En el caso de que no estén, y si vos lo conocés, por favor reportalo y enviá el link en dicho reporte.</p>
-            </div>
+            <p>Bienvenidos a <span class="destacado">IngCompUNLP</span>, el sitio web del estudiante de la carrera <span class="negrita">Ingeniería en Computación</span> de la <span class="negrita">Universidad Nacional de La Plata</span>, creada y mantenida por estudiantes de la carrera.</p>
+            <p>El objetivo de este sitio es poder compartir información de la carrera, tal como apuntes, parciales de años anteriores o fechas de comienzo de cursada, entre otras cosas.</p>
+            <p>Los apuntes y examenes estarán almacenados en carpetas de Google Drive, de las cuales podrás descargar archivos o subir cualquier información que consideres pertinente compartir acerca de cualquiera de las materias.</p>
+            <p>Además también estarán disponibles los links a las páginas de cada cátedra. En el caso de que no estén, y si vos lo conocés, por favor reportalo y enviá el link en dicho reporte.</p>
+            <p>El sitio web funciona bajo 
+             <a href="/terms" target="black" class="destacado">términos y condiciones de uso</a>, y no forma parte de los sitios oficiales de la UNLP.</p>
+          </div>
     	</div>
     	<div class="col-xs-12 col-md-6">
             <div class="well">
@@ -17,6 +20,7 @@
                   <li class="list-group-item"><a href="http://163.10.22.53/ingenieria/sitio/" target="_blank">Facultad Virtual Informática-Ingeniería</a></li>
                   <li class="list-group-item"><a href="http://www.ing.unlp.edu.ar" target="_blank">Facultad de Ingeniería - Sitio oficial</a></li>
                   <li class="list-group-item"><a href="http://www.info.unlp.edu.ar" target="_blank">Facultad de Informática - Sitio oficial</a></li>
+                  <li class="list-group-item"><a href="http://www.unlp.edu.ar/" target="_blank">Universidad Nacional de La Plata - Sitio oficial</a></li>
                   <li class="list-group-item"><a href="https://webunlp.ead.unlp.edu.ar/index.php" target="_blank">WebUNLP</a></li>
                 </ul>
             </div>
