--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
           <p>Los apuntes y examenes estarán almacenados en carpetas de Google Drive, de las cuales podrás descargar archivos o subir cualquier información que consideres pertinente compartir acerca de cualquiera de las materias.</p>
           <p>Además también estarán disponibles los links a las páginas de cada cátedra. En el caso de que no estén, y si vos lo conocés, por favor reportalo y enviá el link en dicho reporte.</p>
           <p>El sitio web funciona bajo 
-           <a href="/terms" target="black" class="destacado">términos y condiciones de uso</a>, y no forma parte de los sitios oficiales de la UNLP.</p>
+           <a href="/terms" target="black" class="destacado" data-toggle="tooltip" data-placement="top" title="Términos y Condiciones de Uso">términos y condiciones de uso</a>, y no forma parte de los sitios oficiales de la UNLP.</p>
         </div>
   	</div>
   	<div class="col-xs-12 col-md-6">
