--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,12 +1,31 @@
-<h2>Resend unlock instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.submit "Resend unlock instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="container">
+    <div class="row">
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-6 col-xs-12">
+            <div class="well">
+                <center><h3 class="negrita" style="padding-bottom:0.5em">Desbloqueo de cuenta</h3></center>
+                <div class="container-fluid">
+                  <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+                    <div class="row">
+                      <div class="col-md-2"></div>
+                      <div class="col-xs-12 col-md-8"><%= f.label "Email" %></div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-2"></div>
+                      <div class="col-xs-12 col-md-8"><%= f.email_field :email, autofocus: true , class:"form-control" %></div>
+                    </div>
+                    <div class="row" style="padding-top:1em">
+                      <div class="col-md-2"></div>
+                      <center><div class="col-xs-12 col-md-8"><%= f.submit "Reenviar instrucciones de desbloqueo" , class:"btn btn-primary negrita" %></div></center>
+                    </div>
+                    <% end %>
+                    <div class="row" style="padding-top:1em">
+                      <div class="col-md-2"></div>
+                      <div class="col-xs-12 col-md-8"><%= render "devise/shared/links" %></div>
+                    </div>
+                </div>
+            </div>
+      </div>
+    </div>
+</div>
