--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -14,7 +14,7 @@
                     <center style="padding-top:1em;padding-bottom:1em;">
                       <div><a href="https://www.facebook.com/tulians" class="negrita" style="color: #3A5795" target="_blank">Facebook</a></div>
                       <div><a href="https://plus.google.com/+JuliánAilán/posts" class="negrita" style="color: #f26161" target="_blank">Google+</a></div>
-                      <div class="negrita">julianailan@outlook.com</div>
+                      <div class="negrita">jtulians@gmail.com</div>
                     </center>
                     <li class="list-group-item negrita">Hourquebie, Lucas</li>
                     <center style="padding-top:1em;padding-bottom:1em;">
