--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -26,7 +26,7 @@
             <p class="destacado">
               <% if ADMINS.include?(current_user.email)%>
                 <%= link_to 'Editar', edit_subject_path(@subject)%> |
-                <%= link_to 'Eliminar', @subject, data: { confirm: '¿Estás segur@?' }, method: :delete %> |
+                <%= link_to 'Eliminar', @subject, data: { confirm: '¿Estás segur@?' }, method: :delete %>
               <% end %>
             </p>
             </center>
